# neura-mind

./: .gitignore  Makefile  Package.swift  README.md  STATE.md  TODO.md  launch.sh  neuramind-all-changes.patch  plan.md  test_plan.md
ContextD/App/: AppDelegate.swift  ContextDApp.swift  ServiceContainer.swift
Resources/: NeuraMind.entitlements  contextd.icns
Tests/: FocusStateStoreTests.swift  ImageDifferTests.swift
docs/: DETAILS.md  SPEC.md  index.html
hooks/: session-context.sh
launchd/: com.contextd.app.plist  com.neuramind.app.plist  com.neuramind.consolidate.plist  com.neuramind.daily-reflection.plist  com.neuramind.llm-proxy.plist  com.neuramind.mental-map.plist  com.neuramind.nightly-digest.plist  com.neuramind.obsidian-sync.plist
llm-proxy/: README.md  run.sh
mcp-bridge/: contextd_mcp.py  neuramind_mcp.py  pyproject.toml
process/: 10_session_record.txt  11_activities.txt  1_screenshot_note.txt  2_diff_info.json  3_ocr_full_screen.txt  3_ocr_raw.txt  4_metadata.json  5_haiku_system_prompt.txt  5_haiku_user_prompt.txt  5_metadata.json  6_capture_record.json  6_haiku_raw_response.json  7_chunk_input.txt  7_haiku_output.txt  8_parsed_summary.json  audit_pipeline.py  test_full_pipeline.py
scripts/: autolog-focus.el  backfill_summaries.py  benchmark.sh  consolidate-vault.py  daily-reflection.py  db-inspect.sh  dev.sh  focus_state.py  gen-info-plist.sh  install-launchd.sh  mental-map.py  neuramind-focus.el  nightly-digest.py  obsidian-init.sh  obsidian-sync.py  obsidian_helpers.py  obsidian_legacy.py  reset-all.sh  vault_cleanup.py
(+107 files in other folders)
