[project]
name = "neuramind-mcp"
version = "0.1.0"
description = "MCP server bridge for neuramind screen context API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
neuramind-mcp = "neuramind_mcp:mcp.run"
